<?xml version="1.0"?>
<package>
  <name>turtlebot_code</name>
  <version>0.0.0</version>
  <description>The turtlebot_code package</description>

  <maintainer email="dexter.w.duckworth@gmail.com">Dexter Duckworth</maintainer>

  <license>BSD</license>

  <url type="STARS Lab">http://stars.msstate.edu</url>

  <author email="dexter.w.duckworth@gmail.com">Dexter Duckworth</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
